Oprettet flere hmtl og css + nyt logo tilføjet

--- a/src/main/resources/templates/Madspild.html
+++ b/src/main/resources/templates/Madspild.html
@@ -17,7 +17,7 @@
     <section class="header">
     <nav>
         <!-- klikke på logoet-->
-        <a href="Madspild.html"><img src="/static/pictures/logo.png"></a>
+        <a href="Madspild.html"><img src="/static/zpictures/dklogo.jpg"></a>
         <div class="nav-button">
             <!-- liste-->
             <ul>
@@ -29,7 +29,7 @@
                     </div>
                 </button>
 
-                <button class="dropbtn2">
+                <!--<button class="dropbtn2">
                         <li> <a href="">Forbrugere</a></li>
                     <div class="dropdown2">
                         <a href="#">Link 2</a>
@@ -48,7 +48,7 @@
                     <div class="dropdown4">
                         <a href="#">Link 4</a>
                     </div>
-                </button>
+                </button>-->
 
                 <button class="dropbtn5">
                         <li> <a href="">Kontakt os</a></li>
@@ -70,8 +70,34 @@
             <h1>Danmark mod Madspild</h1>
             <p>Hver dag bliver der smidt næsten 2.000 tons fødevarer ud <br> i Danmark
             </p>
-            <a href="Forhindring.html" class="buttonfmh">Forhindre madspild her</a>
+            <a class="fmh"><strong>Forhindre madspild her:</Strong></a>
         </div>
+        <nav class="try">
+            <div class="try-button">
+                <ul>
+                <button class="dropbtn2">
+                    <li> <a href="Forbrugere.html">Forbrugere</a></li>
+                    <div class="dropdown2">
+                        <a href="#">Link 2</a>
+                    </div>
+                </button>
+
+                <button class="dropbtn3">
+                    <li> <a href="Virksomheder.html">Virksomheder</a></li>
+                    <div class="dropdown3">
+                        <a href="#">Link 3</a>
+                    </div>
+                </button>
+
+                <button class="dropbtn4">
+                    <li> <a href="Organisationer.html">Organisationer</a></li>
+                    <div class="dropdown4">
+                        <a href="#">Link 4</a>
+                    </div>
+                </button>
+                </ul>
+            </div>
+        </nav>
     </section>
 </body>
 </html>
