--- a/src/main/resources/templates/Madspild.html
+++ b/src/main/resources/templates/Madspild.html
@@ -23,45 +23,14 @@
             <ul>
                 <!-- klikke på linket-->
                 <button class="dropbtn">
-                        <li> <a href="">Home</a></li>
-                    <div class="dropdown">
-                        <a href="#">Link 1</a>
-                    </div>
+                        <li> <a href="Madspild.html">Home</a></li>
                 </button>
-
-                <!--<button class="dropbtn2">
-                        <li> <a href="">Forbrugere</a></li>
-                    <div class="dropdown2">
-                        <a href="#">Link 2</a>
-                    </div>
-                </button>
-
-                <button class="dropbtn3">
-                        <li> <a href="">Virksomheder</a></li>
-                    <div class="dropdown3">
-                        <a href="#">Link 3</a>
-                    </div>
-                </button>
-
-                <button class="dropbtn4">
-                        <li> <a href="">Organisationer</a></li>
-                    <div class="dropdown4">
-                        <a href="#">Link 4</a>
-                    </div>
-                </button>-->
-
                 <button class="dropbtn5">
                         <li> <a href="">Kontakt os</a></li>
-                    <div class="dropdown5">
-                        <a href="#">Link 5</a>
-                    </div>
                 </button>
 
                 <button class="dropbtn6">
                         <li> <a href="">Om os</a></li>
-                    <div class="dropdown6">
-                        <a href="#">Link 6</a>
-                    </div>
                 </button>
             </ul>
         </div>
@@ -77,23 +46,14 @@
                 <ul>
                 <button class="dropbtn2">
                     <li> <a href="Forbrugere.html">Forbrugere</a></li>
-                    <div class="dropdown2">
-                        <a href="#">Link 2</a>
-                    </div>
                 </button>
 
                 <button class="dropbtn3">
                     <li> <a href="Virksomheder.html">Virksomheder</a></li>
-                    <div class="dropdown3">
-                        <a href="#">Link 3</a>
-                    </div>
                 </button>
 
                 <button class="dropbtn4">
                     <li> <a href="Organisationer.html">Organisationer</a></li>
-                    <div class="dropdown4">
-                        <a href="#">Link 4</a>
-                    </div>
                 </button>
                 </ul>
             </div>
