--- a/src/main/resources/templates/Virksomheder.html
+++ b/src/main/resources/templates/Virksomheder.html
@@ -2,9 +2,102 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link th:href="@{/css/Madspild.css}" rel="stylesheet"/>
+    <link href="../static/Madspild.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- skrifttype til mulighederne-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <title>Danmark mod Madspild organisationer</title>
 </head>
 <body>
+<section class="header">
+    <nav>
+        <!-- klikke på logoet-->
+        <a href="Madspild.html"><img src="/static/zpictures/dklogo.jpg"></a>
+        <div class="nav-button">
+            <!-- liste-->
+            <ul>
+                <!-- klikke på linket-->
 
+
+                <button class="dropbtn2">
+                    <li> <a href="">Forbrugere</a></li>
+                    <div class="dropdown2">
+                        <a href="#">Link 2</a>
+                    </div>
+                </button>
+
+                <button class="dropbtn3">
+                    <li> <a href="">Virksomheder</a></li>
+                    <div class="dropdown3">
+                        <a href="#">Link 3</a>
+                    </div>
+                </button>
+
+                <button class="dropbtn4">
+                    <li> <a href="">Organisationer</a></li>
+                    <div class="dropdown4">
+                        <a href="#">Link 4</a>
+                    </div>
+                </button>
+
+                <button class="dropbtn5">
+                    <li> <a href="">Kontakt os</a></li>
+                    <div class="dropdown5">
+                        <a href="#">Link 5</a>
+                    </div>
+                </button>
+
+                <button class="dropbtn6">
+                    <li> <a href="">Om os</a></li>
+                    <div class="dropdown6">
+                        <a href="#">Link 6</a>
+                    </div>
+                </button>
+
+                <button class="dropbtn">
+                    <li> <a href="">Home</a></li>
+                    <div class="dropdown">
+                        <a href="#">Link 1</a>
+                    </div>
+                </button>
+            </ul>
+        </div>
+    </nav>
+    <!-- Jeg har lukket for knapperne indtil indtil videre -->
+    <div class="text">
+        <h1>Danmark mod Madspild</h1>
+        <p>Hver dag bliver der smidt næsten 2.000 tons fødevarer ud <br> i Danmark
+        </p>
+        <!--<a class="fmh"><strong>Forhindre madspild her:</Strong></a>-->
+        <!--</div>
+        <nav class="try">
+            <div class="try-button">
+                <ul>
+                    <button class="dropbtn2">
+                        <li> <a href="Forbrugere.html">Forbrugere</a></li>
+                        <div class="dropdown2">
+                            <a href="#">Link 2</a>
+                        </div>
+                    </button>
+
+                    <button class="dropbtn3">
+                        <li> <a href="Virksomheder.html">Virksomheder</a></li>
+                        <div class="dropdown3">
+                            <a href="#">Link 3</a>
+                        </div>
+                    </button>
+
+                    <button class="dropbtn4">
+                        <li> <a href="Organisationer.html">Organisationer</a></li>
+                        <div class="dropdown4">
+                            <a href="#">Link 4</a>
+                        </div>
+                    </button>
+                </ul>
+            </div>-->
+        </nav>
+</section>
 </body>
 </html>
