Oprettet flere hmtl og css + nyt logo tilføjet Nye ændringer: alt ubrugeligt er blevet slettet Nu er der tilføjet flere ting i startssiden og kommentar i koden (css)

--- a/src/main/resources/templates/Forbrugere.html
+++ b/src/main/resources/templates/Forbrugere.html
@@ -35,7 +35,35 @@
                 </ul>
             </div>
         </nav>
+        <section class="trevalg">
+            <h1>Undgå madspild som forbrugere</h1>
+            <div class="række">
+                <div class="kolonne">
+                    <h3>Lav en madplan:</h3>
+                    <p>Lav en madplan med hvilke og hvor mange retter,<br> der skal spises hver dag. <br>
+                        Vær' opmærksom på hvor mange, <br>der spiser.
+                        Tilføj mellem hvert måltid frugt. <br> Det hjælper med at blive mæt ergo mindre sult <br> lig mindre madlavning.
+                        Start med kun at købe, <br> hvad du kan spise på en uge.<br>
+                        Køb nok dagligvarer til to dage<br> inkl. Morgenmad, frokost og aftensmad.</p>
+                </div>
+                <div class="kolonne">
+                    <h3>Brug madrester kreativt:</h3>
+                    <p>Find måder at bruge madresterne på<br> i stedet for at smide det ud.<br>
+                        Grøntsagsrester kan laves til suppe.<br>
+                        Bløde frugt såsom æbler <br> fungerer perfekt med havregryn eller müsli.
+                        Gammelt brød kan genbages<br> og skæres i fine tern med krydderier til<br> og blandes med salat.<br>
+                        Eventuelt brug madspilds-applikationer såsom <br> "Too Good To Go".
+                    </p>
+                </div>
+                <div class="kolonne">
+                    <h3>Status:</h3>
+                    <p>Med status finder DU, hvad du skal bruge. <br> Åbn køleskabet eller fryseren <br>før du går i supermarket,<br>
+                        notér hvad du MANGLER af ingredienser <br> til maden du skal tilberede, <br> netop for at forhindre overkøb. <br>
+                        Brug eventuelt madrester frem for at købe,<br> hvad du allerede har.
+                    </p>
+                </div>
+            </div>
+        </section>
     </section>
-
 </body>
 </html>
