--- a/src/main/resources/templates/Madspild.html
+++ b/src/main/resources/templates/Madspild.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--<meta name="viewport" content="with-device-width, initial-scale=1.0">
-   --> <title>Danmark mod Madspild</title>
+    <!--<meta name="viewport" content="with-device-width, initial-scale=1.0">-->
+    <title>Danmark mod Madspild</title>
     <!-- Thymeleaf Spring css-->
     <link th:href="@{/css/Madspild.css}" rel="stylesheet"/>
     <!-- Local html css-->
@@ -23,14 +23,15 @@
             <ul>
                 <!-- klikke på linket-->
                 <button class="dropbtn">
-                        <li> <a href="Madspild.html">Home</a></li>
+                        <li><a href="Madspild.html">Home</a></li>
                 </button>
+
                 <button class="dropbtn5">
-                        <li> <a href="">Kontakt os</a></li>
+                        <li><a href="">Kontakt os</a></li>
                 </button>
 
                 <button class="dropbtn6">
-                        <li> <a href="">Om os</a></li>
+                        <li><a href="">Om os</a></li>
                 </button>
             </ul>
         </div>
@@ -58,6 +59,39 @@
                 </ul>
             </div>
         </nav>
+    </section>
+    <section class="vide">
+        <h2>Værd at vide om madspild</h2>
+        <div class="row">
+        <div class="column">
+        <p1>
+            Madspildet i den danske servicesektor <br> udgør 227.000-ton pr.år. <br>
+            Til sammenligning er det samlede madspild<br> fra husholdningerne 261.000-ton pr.år. <br>
+        </p1>
+        </div>
+
+        <div class="column2">
+            <p2>
+                Det største madspild i servicesektoren<br> stammer fra detailhandelen, <br>
+                der spilder 163.000 tons pr.år, <br> svarende til 72% af servicesektorens madspild. <br>
+            </p2>
+        </div>
+        <div class="column3">
+            <p3>
+                Af detailhandelens madspild står <br> specialforretninger som slagtere, <br>
+                fiskeforretninger og grønthandlere <br> for 12.000 tons pr.år, <br>
+                mens ikke-specialiserede forretninger <br> som kiosker, købmænd, <br>
+                supermarkeder og varehuse <br> står for 151.000 ton pr.år. <br>
+            </p3>
+        </div>
+
+        <!--<div class="column4">
+            <p4>
+            Kilde: Kortlægning af madaffald i servicesektoren <br>
+            og Kortlægning af dagrenovation i Danmark
+        </p4>
+        </div>-->
+        </div>
     </section>
 </body>
 </html>
