--- a/src/main/resources/static/Forbrugere.css
+++ b/src/main/resources/static/Forbrugere.css
@@ -1,9 +1,11 @@
+/*anvendelig for alle html elementer*/
 *{
     margin: 0;
     padding: 0;
     /*skrift type til mulighederne*/
     font-family: 'Poppins', sans-serif;
 }
+/*baggrundsbillede*/
 .header{
     min-height: 100vh;
     width: 100%;
@@ -20,30 +22,30 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-
+/*logostr samt gennemsigtighed*/
 nav img{
     width: 150px;
     opacity: 0.8;
 }
-
+/*optage al pladsen i rækken*/
 .nav-button{
     flex: 1;
     text-align: right;
 }
-
+/* list*/
 .nav-button ul li{
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
-
+/*giver muligheder home, kontakt os og om os fedt design*/
 .nav-button ul li a{
     color: white;
     text-decoration: none;
     font-size: 15px;
 }
-
+/*streg under mulighederne home, kontakt os, om os,*/
 .nav-button ul li::after{
     content: "";
     width: 100%;
@@ -54,7 +56,7 @@ nav img{
     /*hover effekt transition*/
     /*transition: 0.5s;*/
 }
-
+/*knappens udseende samt mus detaljen*/
 .dropbtn{
     background-color: orange;
     color:white;
@@ -77,7 +79,7 @@ nav img{
     cursor: pointer;
 }
 
-.dropbtn{
+/*.dropbtn{
     position: relative;
     display: inline-block;
 }
@@ -101,4 +103,60 @@ nav img{
 .dropbtn6:hover .dropdown6{
     display: block;
     background-color: orange;
+}*/
+/*design af anbefalinger til at undgå madspild*/
+.trevalg{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+    color: white;
+}
+/*undgå madspild som forbruger str og skrifttype*/
+h1{
+    font-size: 50px;
+    font-family: 'Poppins', sans-serif;
+}
+/*teksten i kolonnerne*/
+/*.p{
+    color: white;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}*
+/**/
+.række{
+    /*mellemrum fra h2 til kolonnerne*/
+    margin-top: 5%;
+    /*kolonnerne står ved siden af hinanden*/
+    display: flex;
+    /*mellemrum mellem hver kolonne*/
+    justify-content: space-between;
+}
+
+.kolonne{
+    /*mellemrum mellem hver kolonne*/
+    flex-basis: 31%;
+    background: orange;
+    /*giver en uskarp kant*/
+    border-radius: 10px;
+    /*giver mulighed for scrolle op og ned */
+    margin-bottom: 5%;
+    /*giver mere plads i kolonnen(box)*/
+    padding: 20px 12px;
+    /*gør boxene fine*/
+    box-sizing: border-box;
+    /*auto markering ved at rykke musen henover*/
+    transition: 0.5s;
+}
+/*giver en hover markering*/
+.kolonne:hover{
+    box-shadow: 0 0 20px 0px;
+}
+/*overskriften bliver forkælet*/
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
 }
