--- a/src/main/resources/static/Madspild.css
+++ b/src/main/resources/static/Madspild.css
@@ -1,3 +1,4 @@
+/* anvendelig for alle html elementer*/
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +9,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
+    /*første farvekode rgba og anden farvekode rgba*/
     background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(/static/zpictures/zerowaste.jpg);
     background-position: center;
     background-size: cover;
@@ -37,12 +39,13 @@ nav img{
     padding: 8px 12px;
     position: relative;
 }
+/* givet mulighederne home, kontakt os, om os, farve og str*/
 .nav-button ul li a{
     color: white;
     text-decoration: none;
     font-size: 15px;
 }
-/*box under muligheder*/
+/*streg under mulighederne home, kontakt os, om os,*/
 .nav-button ul li::after {
     content: "";
     width: 100%;
@@ -51,6 +54,7 @@ nav img{
     display: block;
     margin: auto;
 }
+/*knappens udseende samt mus detaljen*/
 .dropbtn{
     background-color: orange;
     color:white;
@@ -71,7 +75,7 @@ nav img{
     border:none;
     cursor: pointer;
 }
-.dropbtn{
+/*.dropbtn{
     position: relative;
     display: inline-block;
 }
@@ -83,8 +87,8 @@ nav img{
 .dropbtn6{
     position: relative;
     display: inline-block;
-}
-.dropbtn:hover .dropdown{
+}*/
+/*.dropbtn:hover .dropdown{
     display: block;
     background-color: orange;
 }
@@ -95,8 +99,9 @@ nav img{
 .dropbtn6:hover .dropdown6{
     display: block;
     background-color: orange;
-}
+}*/
 
+/*Danmark mod madspild placering i midten + farve*/
 .text{
     width: 90%;
     color: white;
@@ -106,24 +111,27 @@ nav img{
     transform: translate(-50%, -50%);
     text-align: center;
 }
+/*giver h1 str*/
 .text h1{
-    font-size: 62px;
+    font-size: 50px;
 }
+/*10 px fra top, 0 fra højre og venstre, 40px fra bunden*/
 .text p{
     margin: 10px 0 40px;
     font-size: 14px;
     color:white;
 }
+/*giver str - forhindre madspild her*/
 .fmh{
     font-size: 40px;
 }
-try{
+/*.try{
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
-}
-/*optage al pladsen i rækken "flex"*/
+}*/
+/*optage al pladsen i rækken "flex" + mulighederne placeres i midten under fmh/forhindre madspild her*/
 .try-button{
     flex: 1;
     text-align: center;
@@ -135,13 +143,14 @@ try{
     transform: translate(-50%, -50%);
     text-align: center;
 }
-/*list*/
+/*gør knapperne til mulighederne smukke*/
 .try-button ul li{
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
+/*forhindre madspild her - str og farve*/
 .try-button ul li a{
     color: white;
     text-decoration: none;
@@ -158,7 +167,8 @@ try{
     /*hover effekt transition*/
     /*transition: 0.5s;*/
 }
-.dropbtn2 {
+/**/
+/*.dropbtn2 {
     background-color: orange;
     color: white;
     border: none;
@@ -175,8 +185,8 @@ try{
     color: white;
     border: none;
     cursor: pointer;
-}
-.dropbtn2{
+}*/
+/*.dropbtn2{
     position: relative;
     display: inline-block;
 }
@@ -187,8 +197,8 @@ try{
 .dropbtn4{
     position: relative;
     display: inline-block;
-}
-
+}*/
+/*giver mulighederne forbruger virksomhed og organisation gennemsigtighed og fed detalje*/
 .dropbtn2{
     display: inline-block;
     text-decoration: none;
@@ -199,6 +209,7 @@ try{
     position: relative;
     cursor: pointer;
 }
+/*hover bruges til at langsomt vise farve (detaljen)*/
 .dropbtn2:hover{
     border: 1px solid orange;
     background: orange;
@@ -229,9 +240,41 @@ try{
     position: relative;
     cursor: pointer;
 }
-
 .dropbtn4:hover{
     border: 1px solid orange;
     background: orange;
     transition: 1s;
+}
+/*værd at vide om madspild - */
+.vide{
+    width: 80%;
+    /*placering*/
+    margin: auto;
+    text-align: center;
+    /*afstand fra billede slut til h2 start */
+    padding-top: 20px;
+}
+/*str og tekstens fedme*/
+h2{
+    font-size: 36px;
+    font-weight: 600;
+}
+/**/
+.row{
+    /*afstand fra værd at vide til text-start*/
+    margin-top: 2%;
+    /*orden*/
+    display: flex;
+    /*god mellemrum til de tre kolonner*/
+    justify-content: space-between;
+    text-align: center;
+}
+.column{
+    text-align: justify;
+}
+.column2{
+    text-align: justify;
+}
+.column3{
+    text-align: justify;
 }
