--- a/src/main/resources/templates/Madspild.html
+++ b/src/main/resources/templates/Madspild.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--<meta name="viewport" content="with-device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="with=device-width, initial-scale=1">
     <title>Danmark mod Madspild</title>
     <!-- Thymeleaf Spring css-->
     <link th:href="@{/css/Madspild.css}" rel="stylesheet"/>
@@ -27,11 +27,11 @@
                 </button>
 
                 <button class="dropbtn5">
-                        <li><a href="">Kontakt os</a></li>
+                        <li><a href="Kontaktos.html">Kontakt os</a></li>
                 </button>
 
                 <button class="dropbtn6">
-                        <li><a href="">Om os</a></li>
+                        <li><a href="Omos.html">Om os</a></li>
                 </button>
             </ul>
         </div>
@@ -46,15 +46,15 @@
             <div class="try-button">
                 <ul>
                 <button class="dropbtn2">
-                    <li> <a href="Forbrugere.html">Forbrugere</a></li>
+                    <li> <a href="Forbrugere.html">For forbrugere</a></li>
                 </button>
 
                 <button class="dropbtn3">
-                    <li> <a href="Virksomheder.html">Virksomheder</a></li>
+                    <li> <a href="Virksomheder.html">For virksomheder</a></li>
                 </button>
 
                 <button class="dropbtn4">
-                    <li> <a href="Organisationer.html">Organisationer</a></li>
+                    <li> <a href="Organisationer.html">For organisationer</a></li>
                 </button>
                 </ul>
             </div>
@@ -93,5 +93,8 @@
         </div>-->
         </div>
     </section>
+    <div class="container">
+            <iframe class="responsive-iframe" src="https://www.youtube.com/watch?v=0EfsD7xNLIo"></iframe>
+    </div>
 </body>
 </html>
