--- a/src/main/resources/templates/Forbrugere.html
+++ b/src/main/resources/templates/Forbrugere.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Forbrugere</title>
+  <title>For forbrugere</title>
     <!-- Thymeleaf Spring css-->
     <link th:href="@{/css/Forbrugere.css}" rel="stylesheet"/>
     <!-- Local html css-->
@@ -14,6 +14,24 @@
 </head>
 <body>
     <section class="header">
+        <nav class="try">
+            <div class="try-button">
+                <ul>
+                    <button class="dropbtn2">
+                        <li> <a href="Forbrugere.html">For forbrugere</a></li>
+                    </button>
+
+                    <button class="dropbtn3">
+                        <li> <a href="Virksomheder.html">For virksomheder</a></li>
+                    </button>
+
+                    <button class="dropbtn4">
+                        <li> <a href="Organisationer.html">For organisationer</a></li>
+                    </button>
+                </ul>
+            </div>
+        </nav>
+
         <nav>
             <!-- klikke på logoet-->
             <a href="Madspild.html"><img src="/static/zpictures/dklogo.jpg"></a>
@@ -26,11 +44,11 @@
                     </button>
 
                     <button class="dropbtn5">
-                        <li> <a href="">Kontakt os</a></li>
+                        <li> <a href="Kontaktos.html">Kontakt os</a></li>
                     </button>
 
                     <button class="dropbtn6">
-                        <li> <a href="">Om os</a></li>
+                        <li> <a href="Omos.html">Om os</a></li>
                     </button>
                 </ul>
             </div>
@@ -56,7 +74,7 @@
                     </p>
                 </div>
                 <div class="kolonne">
-                    <h3>Status:</h3>
+                    <h3>Lav altid status:</h3>
                     <p>Med status finder DU, hvad du skal bruge. <br> Åbn køleskabet eller fryseren <br>før du går i supermarket,<br>
                         notér hvad du MANGLER af ingredienser <br> til maden du skal tilberede, <br> netop for at forhindre overkøb. <br>
                         Brug eventuelt madrester frem for at købe,<br> hvad du allerede har.
@@ -64,6 +82,39 @@
                 </div>
             </div>
         </section>
+    </section>
+    <section class="vide">
+        <h2>Værd at vide om madspild</h2>
+        <div class="row">
+            <div class="column">
+                <p1>
+                    Madspildet i den danske servicesektor <br> udgør 227.000-ton pr.år. <br>
+                    Til sammenligning er det samlede madspild<br> fra husholdningerne 261.000-ton pr.år. <br>
+                </p1>
+            </div>
+
+            <div class="column2">
+                <p2>
+                    Det største madspild i servicesektoren<br> stammer fra detailhandelen, <br>
+                    der spilder 163.000 tons pr.år, <br> svarende til 72% af servicesektorens madspild. <br>
+                </p2>
+            </div>
+            <div class="column3">
+                <p3>
+                    Af detailhandelens madspild står <br> specialforretninger som slagtere, <br>
+                    fiskeforretninger og grønthandlere <br> for 12.000 tons pr.år, <br>
+                    mens ikke-specialiserede forretninger <br> som kiosker, købmænd, <br>
+                    supermarkeder og varehuse <br> står for 151.000 ton pr.år. <br>
+                </p3>
+            </div>
+
+            <!--<div class="column4">
+                <p4>
+                Kilde: Kortlægning af madaffald i servicesektoren <br>
+                og Kortlægning af dagrenovation i Danmark
+            </p4>
+            </div>-->
+        </div>
     </section>
 </body>
 </html>
