--- a/src/main/resources/templates/Organisationer.html
+++ b/src/main/resources/templates/Organisationer.html
@@ -2,16 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{/css/Madspild.css}" rel="stylesheet"/>
-    <link href="../static/Madspild.css" rel="stylesheet">
+    <link th:href="@{/css/Forbrugere.css}" rel="stylesheet"/>
+    <link href="../static/Forbrugere.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- skrifttype til mulighederne-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <title>Danmark mod Madspild organisationer</title>
+    <title>For organisationer</title>
 </head>
 <body>
 <section class="header">
+    <nav class="try">
+        <div class="try-button">
+            <ul>
+                <button class="dropbtn2">
+                    <li> <a href="Forbrugere.html">Forbrugere</a></li>
+                </button>
+
+                <button class="dropbtn3">
+                    <li> <a href="Virksomheder.html">Virksomheder</a></li>
+                </button>
+
+                <button class="dropbtn4">
+                    <li> <a href="Organisationer.html">Organisationer</a></li>
+                </button>
+            </ul>
+        </div>
+    </nav>
+
     <nav>
         <!-- klikke på logoet-->
         <a href="Madspild.html"><img src="/static/zpictures/dklogo.jpg"></a>
@@ -19,84 +37,82 @@
             <!-- liste-->
             <ul>
                 <!-- klikke på linket-->
-
-
-                <button class="dropbtn2">
-                        <li> <a href="">Forbrugere</a></li>
-                    <div class="dropdown2">
-                        <a href="#">Link 2</a>
-                    </div>
-                </button>
-
-                <button class="dropbtn3">
-                        <li> <a href="">Virksomheder</a></li>
-                    <div class="dropdown3">
-                        <a href="#">Link 3</a>
-                    </div>
-                </button>
-
-                <button class="dropbtn4">
-                        <li> <a href="">Organisationer</a></li>
-                    <div class="dropdown4">
-                        <a href="#">Link 4</a>
-                    </div>
+                <button class="dropbtn">
+                    <li> <a href="Madspild.html">Home</a></li>
                 </button>
 
                 <button class="dropbtn5">
-                    <li> <a href="">Kontakt os</a></li>
-                    <div class="dropdown5">
-                        <a href="#">Link 5</a>
-                    </div>
+                    <li> <a href="Kontaktos.html">Kontakt os</a></li>
                 </button>
 
                 <button class="dropbtn6">
-                    <li> <a href="">Om os</a></li>
-                    <div class="dropdown6">
-                        <a href="#">Link 6</a>
-                    </div>
-                </button>
-
-                <button class="dropbtn">
-                    <li> <a href="">Home</a></li>
-                    <div class="dropdown">
-                        <a href="#">Link 1</a>
-                    </div>
+                    <li> <a href="Omos.html">Om os</a></li>
                 </button>
             </ul>
         </div>
     </nav>
-    <div class="text">
-        <h1>Danmark mod Madspild</h1>
-        <p>Hver dag bliver der smidt næsten 2.000 tons fødevarer ud <br> i Danmark
-        </p>
-        <!--<a class="fmh"><strong>Forhindre madspild her:</Strong></a>-->
-    <!--</div>
-    <nav class="try">
-        <div class="try-button">
-            <ul>
-                <button class="dropbtn2">
-                    <li> <a href="Forbrugere.html">Forbrugere</a></li>
-                    <div class="dropdown2">
-                        <a href="#">Link 2</a>
-                    </div>
-                </button>
+    <section class="trevalg">
+        <h1>Undgå madspild som forbrugere</h1>
+        <div class="række">
+            <div class="kolonne">
+                <h3>Lav en madplan:</h3>
+                <p>Lav en madplan med hvilke og hvor mange retter,<br> der skal spises hver dag. <br>
+                    Vær' opmærksom på hvor mange, <br>der spiser.
+                    Tilføj mellem hvert måltid frugt. <br> Det hjælper med at blive mæt ergo mindre sult <br> lig mindre madlavning.
+                    Start med kun at købe, <br> hvad du kan spise på en uge.<br>
+                    Køb nok dagligvarer til to dage<br> inkl. Morgenmad, frokost og aftensmad.</p>
+            </div>
+            <div class="kolonne">
+                <h3>Brug madrester kreativt:</h3>
+                <p>Find måder at bruge madresterne på<br> i stedet for at smide det ud.<br>
+                    Grøntsagsrester kan laves til suppe.<br>
+                    Bløde frugt såsom æbler <br> fungerer perfekt med havregryn eller müsli.
+                    Gammelt brød kan genbages<br> og skæres i fine tern med krydderier til<br> og blandes med salat.<br>
+                    Eventuelt brug madspilds-applikationer såsom <br> "Too Good To Go".
+                </p>
+            </div>
+            <div class="kolonne">
+                <h3>Lav altid status:</h3>
+                <p>Med status finder DU, hvad du skal bruge. <br> Åbn køleskabet eller fryseren <br>før du går i supermarket,<br>
+                    notér hvad du MANGLER af ingredienser <br> til maden du skal tilberede, <br> netop for at forhindre overkøb. <br>
+                    Brug eventuelt madrester frem for at købe,<br> hvad du allerede har.
+                </p>
+            </div>
+        </div>
+    </section>
+</section>
+<section class="vide">
+    <h2>Værd at vide om madspild</h2>
+    <div class="row">
+        <div class="column">
+            <p1>
+                Madspildet i den danske servicesektor <br> udgør 227.000-ton pr.år. <br>
+                Til sammenligning er det samlede madspild<br> fra husholdningerne 261.000-ton pr.år. <br>
+            </p1>
+        </div>
 
-                <button class="dropbtn3">
-                    <li> <a href="Virksomheder.html">Virksomheder</a></li>
-                    <div class="dropdown3">
-                        <a href="#">Link 3</a>
-                    </div>
-                </button>
+        <div class="column2">
+            <p2>
+                Det største madspild i servicesektoren<br> stammer fra detailhandelen, <br>
+                der spilder 163.000 tons pr.år, <br> svarende til 72% af servicesektorens madspild. <br>
+            </p2>
+        </div>
+        <div class="column3">
+            <p3>
+                Af detailhandelens madspild står <br> specialforretninger som slagtere, <br>
+                fiskeforretninger og grønthandlere <br> for 12.000 tons pr.år, <br>
+                mens ikke-specialiserede forretninger <br> som kiosker, købmænd, <br>
+                supermarkeder og varehuse <br> står for 151.000 ton pr.år. <br>
+            </p3>
+        </div>
 
-                <button class="dropbtn4">
-                    <li> <a href="Organisationer.html">Organisationer</a></li>
-                    <div class="dropdown4">
-                        <a href="#">Link 4</a>
-                    </div>
-                </button>
-            </ul>
+        <!--<div class="column4">
+            <p4>
+            Kilde: Kortlægning af madaffald i servicesektoren <br>
+            og Kortlægning af dagrenovation i Danmark
+        </p4>
         </div>-->
-    </nav>
+    </div>
 </section>
 </body>
 </html>
